Add input restriction and sequence diagram for DeleteClientMult